src/Deployment.Runner/deployment/scripts/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  labels:
    app.kubernetes.io/managed-by: helm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/rewrite-target https://kubernetes.github.io/ingress-nginx/examples/rewrite/
spec:
  rules:
    - host: PROMETHEUS_INGRESS_HOSTNAME_PLACEHOLDER
      http:
        paths:
          - backend:
              serviceName: prom-rel-kube-prometheus-s-prometheus
              servicePort: 9090
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - PROMETHEUS_INGRESS_HOSTNAME_PLACEHOLDER
      secretName: grafana-ingress-secret
